# parallelized-simple-search-engine

./: .gitignore  README.md
crawler/: Makefile  crawler  crawler.c  crawler.cpp  crawler.valgrind  crawler_c  crawler_c.c  job-crawler-1  job-crawler-16  job-crawler-36  job-crawler-4  job-crawler-68  openmp_crawler  openmp_crawler.cpp  openmp_crawler_v2  openmp_crawler_v2.cpp  openmpv2-1-core-2333.out  openmpv2-16-core-58755358.out  openmpv2-36-core-58754379.out  openmpv2-4-core-58759381.out  openmpv2-68-core-58754117.out
indexer/: CMakeLists.txt  Makefile  distribute_indexer.cpp  indexer  indexer.c  indexer.cpp  indexer.valgrind  job-indexer-1  job-indexer-16  job-indexer-36  job-indexer-4  job-indexer-68  job-indexer-serial  modules.sh  openmp-68-core-58787691.out  openmp-68-core-58789331.out  openmp_indexer  openmp_indexer.cpp
pages/: 1
plot/: parallel_efficiency.py  strong_scaling.py
querier/: Makefile  querier  querier.c  querier.valgrind
test/: Makefile  index.valgrind  index_testfile  page.valgrind  test_index  test_index.c  test_page  test_page.c
utils/: Makefile  hash.c  indexio.c  indexio.h  lhash.c  lhash.h  lqueue.c  lqueue.h  pageio.c  pageio.cpp  pageio.hpp  queue.c  webpage.c  webpage.h
